--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mnguo98/recipe-creator#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bulma": "^0.8.0",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "sync-request": "^6.1.0"
